--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <!-- nav -->
     <nav>
-      <img src="./images/logo.svg" alt="logo" />
+      <img src="./images/icon-hamburger.svg" alt="logo" />
       <div>
         <a href="#">How we work</a>
         <a href="#">Blog</a>
